[FIX] web: fix alignment issue  on res setting
Steps to reproduce the issue(small device):
  - Install Project module
  - Open  the res setting
  - Check the search bar

Issue:
 breadcrumb label('Settings') and  search  input box  are  not displayed on one line.

Fixed:
   Both display on one line.

task-3076254

--- a/addons/web/static/src/webclient/settings_form_view/settings_form_view_mobile.scss
+++ b/addons/web/static/src/webclient/settings_form_view/settings_form_view_mobile.scss
@@ -1,5 +1,15 @@
 @include media-breakpoint-down(md) {
 
+    .o-settings-form-view {
+        .o_cp_top {
+            flex-flow: row!important;
+
+            .o_cp_searchview {
+                width: 100%;
+            }
+        }
+    }
+
     .o_base_settings {
         flex-flow: column nowrap;
 
